<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.unisep.truco_marker.WelcomeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome_one"
        android:id="@+id/textView3"
        android:layout_marginTop="39dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="43dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome_two"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="89dp"
        android:textSize="@dimen/title_dimension" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_new_game"
        android:id="@+id/button"
        android:layout_above="@+id/button2"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignEnd="@+id/textView4"
        android:onClick="createNewGame" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_to_another_option"
        android:id="@+id/button2"
        android:layout_marginBottom="78dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView4"
        android:layout_alignEnd="@+id/button"
        android:layout_marginTop="10dp" />
</RelativeLayout>
